# wc2026-ai

./: .env.example  .gitignore  DECISIONS.md  DESIGN.md  Makefile  README.md  blog_post_devto.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: streamlit_app.py
data/outputs/: bracket_results.parquet  calibration_latest.json  calibration_records.parquet  feature_importance.parquet  latest_predictions.parquet  model_metrics.json  probability_timeseries.parquet  turkey_path.parquet  wc2026_fixtures.parquet
src/wc26/: card.py  config.py  schemas.py  update.py
src/wc26/data/: build.py
src/wc26/features/: elo.py  form.py  pipeline.py
src/wc26/fetchers/: apifootball.py  base.py  fifa_ranking.py  footballdata.py  kaggle_historical.py  odds_live.py  wikipedia.py  xg_soccerdata.py
src/wc26/models/: base.py  bayesian_poisson.py  calibration.py  ensemble.py  lgbm.py  market_model.py
src/wc26/sim/: bracket_sim.py  group_sim.py  turkey.py
tests/: test_fetchers.py  test_idempotency.py  test_leakage.py  test_models.py
