[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wc26"
version = "0.1.0"
description = "World Cup 2026 AI Prediction System"
requires-python = ">=3.11"
dependencies = [
    "pymc>=5.0",
    "lightgbm>=4.0",
    "scikit-learn>=1.3",
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=13.0",
    "httpx>=0.25",
    "tenacity>=8.0",
    "soccerdata>=1.0",
    "streamlit>=1.28",
    "plotly>=5.17",
    "matplotlib>=3.8",
    "pydantic-settings>=2.0",
    "pydantic>=2.0",
    "pandera>=0.17",
    "kaggle>=1.5",
    "python-dotenv>=1.0",
    "arviz>=0.16",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/wc26"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.metadata]
allow-direct-references = true
